--- a/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
+++ b/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
@@ -1,5 +1,20 @@
 # Linux下ZK基本操作和acl权限
+<!-- TOC -->
 
+- [Linux下ZK基本操作和acl权限](#linux下zk基本操作和acl权限)
+    - [一些基本命令](#一些基本命令)
+    - [zk session的基本原理](#zk-session的基本原理)
+    - [zk watcher机制](#zk-watcher机制)
+        - [Watcher概念](#watcher概念)
+        - [父节点Watcher操作](#父节点watcher操作)
+        - [子节点Watcher操作](#子节点watcher操作)
+        - [Watcher使用场景](#watcher使用场景)
+    - [ACL(access control lists)权限控制](#aclaccess-control-lists权限控制)
+        - [ACL作用](#acl作用)
+        - [ACL构成](#acl构成)
+        - [permissions](#permissions)
+
+<!-- /TOC -->
 ## 一些基本命令
 1. `ls /` 显示/路径下的节点
 2. `ls2 /`显示/路径下的节点并显示其节点的状态
@@ -39,3 +54,28 @@
 
 ### Watcher使用场景
 统一资源配置,一个节点更新了配置信息之后会触发watcher,再去更新其它节点
+
+
+## ACL(access control lists)权限控制
+
+### ACL作用
+1. 针对节点可以设置相关读写权限,为了保障数据安全性
+2. 权限permissions可以指定不同的权限范围以及角色
+
+### ACL构成
+1. zk的acl通过`[scheme:id:permissions]`来构成权限列表 `scheme`:代表采用某种权限机制,`id`:代表允许访问的用户,`permissions`:权限组合字符串
+2. scheme
+    1. world:world只有一个用户,是anyone,组合写法是:`world:anyone:[permissions]`
+    2. auth:代表认证登录,写法是:`user:password:[permissions]`
+    3. permissions:需要对密码进行加密,写法是:`username:BASE64(SHA1(password)):[permissions]`
+3. ip:限制ip访问:`192.168.1.1:[permissions]`
+4. super: 超管,有所有权限
+
+### permissions
+权限字符串缩写 crdwa
+
+1. create: 创建子节点
+2. redwa: 获取节点/子节点
+3. write: 设置节点数据
+4. delete: 删除子节点
+5. admin: 设置权限
