--- a/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
+++ b/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
@@ -13,6 +13,11 @@
         - [ACL作用](#acl作用)
         - [ACL构成](#acl构成)
         - [permissions](#permissions)
+        - [world](#world)
+        - [auth and digest](#auth-and-digest)
+        - [IP](#ip)
+        - [Super超管](#super超管)
+        - [acl常用场景](#acl常用场景)
 
 <!-- /TOC -->
 ## 一些基本命令
@@ -79,3 +84,31 @@
 3. write: 设置节点数据
 4. delete: 删除子节点
 5. admin: 设置权限
+
+### world
+world:anyone:cdrwa
+
+1. `setAcl /path/something crwa`,设置权限,除去delete权限,但是something子节点还是可以删除的,只有something的新的子节点才会生效
+2. `getAcl /path/something`查询权限
+
+### auth and digest
+1. 通过`addauth digest zxl:zxl`添加一个用户
+2. 通过`setAcl /names/zhouxiaolong auth:zxl:zxl:cdrwa`给path设置一个用户,并且设置权限
+3. 通过`setAcl /names/zhangxueyou digest:zxl:c/ZdS1MBMNRYHHn+GvO4umbHPyM=:crwa`给path设置一个用户,通过加密密码设置
+4. 设置了用户之后,anyone的匿名用户就不能再对其进行操作了,需要`addauth digest zxl:zxl` 进行登录操作
+
+### IP
+设置命令:`setAcl /names/ip ip:192.168.1.1:cdrwa`
+
+### Super超管
+1. 修改zkServer.sh增加super管理员
+```shell
+修改nohup这一行:
+nohup "$JAVA" "-Dzookeeper.log.dir=${ZOO_LOG_DIR}" "-Dzookeeper.root.logger=${ZOO_LOG4J_PROP}" "-Dzookeeper.DigestAuthenticationProvider.superDigest=super:c/ZdS1MBMNRYHHn+GvO4umbHPyM=" \  
+```
+2. 重启zkServer.sh
+
+### acl常用场景
+1. 开发/测试环境分离,开发者只拥有只读节点
+2. 生产环境上控制指定ip的服务只能访问相关节点,防止混乱
+
