--- a/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
+++ b/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
@@ -18,6 +18,8 @@
         - [IP](#ip)
         - [Super超管](#super超管)
         - [acl常用场景](#acl常用场景)
+    - [zk四字命令(Four Letter Words)](#zk四字命令four-letter-words)
+        - [常用命令](#常用命令)
 
 <!-- /TOC -->
 ## 一些基本命令
@@ -112,3 +114,18 @@ nohup "$JAVA" "-Dzookeeper.log.dir=${ZOO_LOG_DIR}" "-Dzookeeper.root.logger=${ZO
 1. 开发/测试环境分离,开发者只拥有只读节点
 2. 生产环境上控制指定ip的服务只能访问相关节点,防止混乱
 
+## zk四字命令(Four Letter Words)
+1. zk可以通过它提供的命令简写来和服务器进行交互
+2. 需要使用到nc命令,安装: `yum install nc`
+3. `echo [command] | nc [ip] [port]`
+
+### 常用命令
+1. `echo stat | nc localhost 2181` 查看zk状态
+2. `echo ruok | nc localhost 2181` 查看zk是否启动,返回imok,(Areyouok?)
+3. `echo dump | nc localhost 2181` 查看未经处理的会话和临时节点
+4. `echo conf | nc localhost 2181` 查看服务器配置
+5. `echo cons | nc localhost 2181` 查看连接到服务器的客户端信息
+6. `echo envi | nc localhost 2181` 查看环境变量
+7. `echo mntr | nc localhost 2181` 查看zk健康信息
+8. `echo wchs | nc localhost 2181` 查看watch的信息
+9. `echo mntr | nc localhost 2181` 查看zk健康信息
