--- a/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
+++ b/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
@@ -128,4 +128,4 @@ nohup "$JAVA" "-Dzookeeper.log.dir=${ZOO_LOG_DIR}" "-Dzookeeper.root.logger=${ZO
 6. `echo envi | nc localhost 2181` 查看环境变量
 7. `echo mntr | nc localhost 2181` 查看zk健康信息
 8. `echo wchs | nc localhost 2181` 查看watch的信息
-9. `echo mntr | nc localhost 2181` 查看zk健康信息
+9. `echo wchc[wchp] | nc localhost 2181` 查看session与watch 及 path与watch的信息
