集群环境搭建

--- a/Zookeeper分布式和Dubbo微服务/3.ZooKeeper集群搭建.md
+++ b/Zookeeper分布式和Dubbo微服务/3.ZooKeeper集群搭建.md
@@ -1,2 +1,21 @@
 # ZooKeeper集群搭建
 zk集群,主从节点,心跳机制,使用选举模式
+
+## zk集群搭建注意点
+1. 配置数据文件 myid 1/2/3 对应 server.1/2/3
+2. 通过`./zkCli.sh -server [ip]:[port]`检测集群是否配置成功
+
+## 伪分布式集群搭建
+1. 通过复制三份zookeeper到`/usr/local`下
+2. 配置`dataDir`下,编辑`myid`文件,分别为1/2/3
+3. 配置`conf/zoo.cfg`,配置三个端口,并且添加配置server.1/2/3,第一个端口是`同步用`,第二个端口`选举用`
+```conf
+server.1=127.0.0.1:2888:3888
+server.2=127.0.0.1:2889:3889
+server.3=127.0.0.1:2890:3890
+```
+4. 通过`zkCli.sh -server [ip]:[port]`可以启动zk,在一个zk下创建node,就可以在另两个zk下同步
+5. 通过`zkServer.sh status`可以查看到每个节点的状态和主从关系
+
+## 真实环境集群搭建
+和伪分布集群搭建相差无几,只是IP不同
