--- a/Zookeeper分布式和Dubbo微服务/4.使用JavaAPI进行zk客户端开发.md
+++ b/Zookeeper分布式和Dubbo微服务/4.使用JavaAPI进行zk客户端开发.md
@@ -1,14 +1,234 @@
 # 使用JavaAPI进行zk客户端开发
 
 ## 会话连接和恢复
+```java
+/**
+ * zk连接demo
+ * @author whoiszxl
+ *
+ */
+public class ZKConnect implements Watcher{
 
+	final static Logger log = LoggerFactory.getLogger(ZKConnect.class);
+	
+	public static final String zkServerPath = "swoole.whoiszxl.com:2181,swoole.whoiszxl.com:2182,swoole.whoiszxl.com:2183";
+
+	public static final Integer timeout = 5000;
+	
+	@SuppressWarnings("static-access")
+	public static void main(String[] args) throws IOException, InterruptedException {
+		/**
+		 * 客户端和zk服务端链接是一个异步的过程
+		 * 当连接成功后后，客户端会收的一个watch通知
+		 * 
+		 * 参数：
+		 * connectString：连接服务器的ip字符串，
+		 * 		比如: "192.168.1.1:2181,192.168.1.2:2181,192.168.1.3:2181"
+		 * 		可以是一个ip，也可以是多个ip，一个ip代表单机，多个ip代表集群
+		 * 		也可以在ip后加路径
+		 * sessionTimeout：超时时间，心跳收不到了，那就超时
+		 * watcher：通知事件，如果有对应的事件触发，则会收到一个通知；如果不需要，那就设置为null
+		 * canBeReadOnly：可读，当这个物理机节点断开后，还是可以读到数据的，只是不能写，
+		 * 					       此时数据被读取到的可能是旧数据，此处建议设置为false，不推荐使用
+		 * sessionId：会话的id
+		 * sessionPasswd：会话密码	当会话丢失后，可以依据 sessionId 和 sessionPasswd 重新获取会话
+		 */
+		ZooKeeper zk = new ZooKeeper(zkServerPath, timeout, new ZKConnect());
+		log.warn("客户端开始连接zookeeper服务器...");
+		log.warn("连接状态：{}", zk.getState());
+		
+		new Thread().sleep(2000);
+		
+		log.warn("连接状态：{}", zk.getState());
+	}
+	
+	@Override
+	public void process(WatchedEvent event) {
+		log.warn("接受到watch通知：{}", event);
+	}
+	
+}
+
+
+
+/**
+ * 恢复之前的会话连接demo演示
+ * @author whoiszxl
+ *
+ */
+public class ZKConnectSessionWatcher implements Watcher{
+
+	final static Logger log = LoggerFactory.getLogger(ZKConnectSessionWatcher.class);
+
+	public static final String zkServerPath = "swoole.whoiszxl.com:2181,swoole.whoiszxl.com:2182,swoole.whoiszxl.com:2183";
+	public static final Integer timeout = 5000;
+	
+	public static void main(String[] args) throws Exception {
+		
+		//创建zk设置连接地址,超时时间和watcher
+		ZooKeeper zk = new ZooKeeper(zkServerPath, timeout, new ZKConnectSessionWatcher());
+		
+		long sessionId = zk.getSessionId();
+		String ssid = "0x" + Long.toHexString(sessionId);
+		System.out.println(ssid);
+		byte[] sessionPassword = zk.getSessionPasswd();
+		
+		log.warn("客户端开始连接zookeeper服务器...");
+		log.warn("连接状态：{}", zk.getState());
+		new Thread().sleep(1000);
+		log.warn("连接状态：{}", zk.getState());
+		
+		new Thread().sleep(200);
+		
+		// 开始会话重连
+		log.warn("开始会话重连...");
+		
+		ZooKeeper zkSession = new ZooKeeper(zkServerPath, 
+											timeout, 
+											new ZKConnectSessionWatcher(), 
+											sessionId, 
+											sessionPassword);
+		log.warn("重新连接状态zkSession：{}", zkSession.getState());
+		new Thread().sleep(1000);
+		log.warn("重新连接状态zkSession：{}", zkSession.getState());
+	}
+	
+	@Override
+	public void process(WatchedEvent event) {
+		log.warn("接受到watch通知：{}", event);
+	}
+}
+
+```
 
 
 
 ## 节点的增删改查
+```java
+/**
+ * 
+ * @Title: ZKConnectDemo.java
+ * @Description: zookeeper 操作demo演示
+ */
+public class ZKNodeOperator implements Watcher {
 
+	private ZooKeeper zookeeper = null;
+	
+	public static final String zkServerPath = "swoole.whoiszxl.com:2181,swoole.whoiszxl.com:2182,swoole.whoiszxl.com:2183";
+	public static final Integer timeout = 5000;
+	
+	public ZKNodeOperator() {}
+	
+	/**
+	 * 构造方法初始化zk服务
+	 * @param connectString
+	 */
+	public ZKNodeOperator(String connectString) {
+		try {
+			zookeeper = new ZooKeeper(connectString, timeout, new ZKNodeOperator());
+		} catch (IOException e) {
+			e.printStackTrace();
+			if (zookeeper != null) {
+				try {
+					zookeeper.close();
+				} catch (InterruptedException e1) {
+					e1.printStackTrace();
+				}
+			}
+		}
+	}
+	
+	/**
+	 * 
+	 * @Title: ZKOperatorDemo.java
+	 * @Description: 创建zk节点
+	 */
+	public void createZKNode(String path, byte[] data, List<ACL> acls) {
+		
+		String result = "";
+		try {
+			/**
+			 * 同步或者异步创建节点，都不支持子节点的递归创建，异步有一个callback函数
+			 * 参数：
+			 * path：创建的路径
+			 * data：存储的数据的byte[]
+			 * acl：控制权限策略
+			 * 			Ids.OPEN_ACL_UNSAFE --> world:anyone:cdrwa
+			 * 			CREATOR_ALL_ACL --> auth:user:password:cdrwa
+			 * createMode：节点类型, 是一个枚举
+			 * 			PERSISTENT：持久节点
+			 * 			PERSISTENT_SEQUENTIAL：持久顺序节点
+			 * 			EPHEMERAL：临时节点
+			 * 			EPHEMERAL_SEQUENTIAL：临时顺序节点
+			 */
+			result = zookeeper.create(path, data, acls, CreateMode.PERSISTENT);
+			
+//			String ctx = "{'create':'success'}";
+//			zookeeper.create(path, data, acls, CreateMode.PERSISTENT, new CreateCallBack(), ctx);
+			
+			System.out.println("创建节点：\t" + result + "\t成功...");
+			new Thread().sleep(2000);
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+	
+	public static void main(String[] args) throws Exception {
+		ZKNodeOperator zkServer = new ZKNodeOperator(zkServerPath);
+		
+		// 创建zk节点
+//		zkServer.createZKNode("/testnode", "testnode".getBytes(), Ids.OPEN_ACL_UNSAFE);
+		
+		/**
+		 * 参数：
+		 * path：节点路径
+		 * data：数据
+		 * version：数据状态
+		 */
+//		Stat status  = zkServer.getZookeeper().setData("/testnode", "xyz".getBytes(), 2);
+//		System.out.println(status.getVersion());
+		
+		/**
+		 * 参数：
+		 * path：节点路径
+		 * version：数据状态
+		 */
+		zkServer.createZKNode("/test-delete-node", "123".getBytes(), Ids.OPEN_ACL_UNSAFE);
+//		zkServer.getZookeeper().delete("/test-delete-node", 2);
+		
+		String ctx = "{'delete':'success'}";
+		zkServer.getZookeeper().delete("/test-delete-node", 0, new DeleteCallBack(), ctx);
+		Thread.sleep(2000);
+	}
+
+	public ZooKeeper getZookeeper() {
+		return zookeeper;
+	}
+	public void setZookeeper(ZooKeeper zookeeper) {
+		this.zookeeper = zookeeper;
+	}
+
+	@Override
+	public void process(WatchedEvent event) {
+	}
+}
+public class DeleteCallBack implements VoidCallback {
+	@Override
+	public void processResult(int rc, String path, Object ctx) {
+		System.out.println("删除节点" + path);
+		System.out.println((String)ctx);
+	}
+
+}
+
+
+
+```
 
 
 
 
 ## watch和acl的相关操作
+```
+
+```
