mycat: rule.xml配置

--- a/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
+++ b/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
@@ -189,3 +189,18 @@
     </Loggers>
 </Configuration>
 ```
+
+### rule.xml配置
+用途： 1.配置水平分片的规则   2.配置分片规则所对应的分片函数
+```xml
+<tableRule name="sharding-by-intfile"> <!-- 配置分片规则名 要唯一 -->
+        <rule>
+                <columns>sharding_id</columns><!-- 需要分片的列 -->
+                <algorithm>hash-int</algorithm><!-- 分片算法：取自<function>标签中的值 -->
+        </rule>
+</tableRule>
+```
+
+#### 常用分片算法
+1. 配置简单取模 -- PartitionByMod,可以用于分片列为整数类型的表，分片列mod分片基数，类全名：`io.mycat.route.function.PartitionByMod`
+2. 配置哈希取模 -- PartitionByHashMod,用于多种数据类型如字符串，日期等，将username，goods_name等列进行hash计算并与count进行取模计算，类全名：`io.mycat.route.function.PartitionByHashMod`
