mycat: 常用分片算法

--- a/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
+++ b/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
@@ -1,7 +1,16 @@
 
 
 ## 配置文件详解
+<!-- TOC -->
 
+- [配置文件详解](#配置文件详解)
+    - [server.xml文件](#serverxml文件)
+        - [<system>配置mycat系统参数](#system配置mycat系统参数)
+    - [log4j.xml](#log4jxml)
+    - [rule.xml配置](#rulexml配置)
+        - [常用分片算法](#常用分片算法)
+
+<!-- /TOC -->
 ### server.xml文件
 用途：1.配置系统相关参数 2.配置用户访问权限 3.配置SQL防火墙及SQL拦截功能
 
@@ -202,5 +211,9 @@
 ```
 
 #### 常用分片算法
-1. 配置简单取模 -- PartitionByMod,可以用于分片列为整数类型的表，分片列mod分片基数，类全名：`io.mycat.route.function.PartitionByMod`
-2. 配置哈希取模 -- PartitionByHashMod,用于多种数据类型如字符串，日期等，将username，goods_name等列进行hash计算并与count进行取模计算，类全名：`io.mycat.route.function.PartitionByHashMod`
+1. 简单取模 -- PartitionByMod,可以用于分片列为整数类型的表，分片列mod分片基数，类全名：`io.mycat.route.function.PartitionByMod`
+2. 哈希取模 -- PartitionByHashMod,用于多种数据类型如字符串，日期等，将username，goods_name等列进行hash计算并与count进行取模计算，类全名：`io.mycat.route.function.PartitionByHashMod`
+3. 枚举分片 -- PartitionByFileMap,可以根据可能的枚举值指定数据存储的位置，`$MYCAT_HOME/conf`目录下要增加MapFile配置枚举值同节点的对应关系，比如说：通过对用户地址的编号进行枚举分片
+4. 字符串范围取模分片 -- PartitionByPrefixPattern,可以将username字段的前两个字符取到ASCII码相加，再和128进行取模，`$MYCAT_HOME/conf`目录下的mapFile配置对应关系，如：`0-10=0`，就是取模的值在0至1的范围内就存到0的分片中去
+
+
