--- a/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
+++ b/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
@@ -9,6 +9,7 @@
     - [log4j.xml](#log4jxml)
     - [rule.xml配置](#rulexml配置)
         - [常用分片算法](#常用分片算法)
+    - [schema.xml配置](#schemaxml配置)
 
 <!-- /TOC -->
 ### server.xml文件
@@ -216,4 +217,5 @@
 3. 枚举分片 -- PartitionByFileMap,可以根据可能的枚举值指定数据存储的位置，`$MYCAT_HOME/conf`目录下要增加MapFile配置枚举值同节点的对应关系，比如说：通过对用户地址的编号进行枚举分片
 4. 字符串范围取模分片 -- PartitionByPrefixPattern,可以将username字段的前两个字符取到ASCII码相加，再和128进行取模，`$MYCAT_HOME/conf`目录下的mapFile配置对应关系，如：`0-10=0`，就是取模的值在0至1的范围内就存到0的分片中去
 
-
+### schema.xml配置
+用途：1.配置逻辑库和逻辑表  2.配置逻辑表所存储的数据节点  3.配置数据节点所对应的物理数据库服务器信息
