mycat: schema.xml文件

--- a/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
+++ b/MyCAT+MySQL搭建高可用数据库集群/2.MyCAT进阶操作.md
@@ -10,6 +10,10 @@
     - [rule.xml配置](#rulexml配置)
         - [常用分片算法](#常用分片算法)
     - [schema.xml配置](#schemaxml配置)
+        - [<schema>定义逻辑库](#schema定义逻辑库)
+        - [<schema>定义逻辑表](#schema定义逻辑表)
+        - [<dataNode>定义逻辑表存储的物理数据库](#datanode定义逻辑表存储的物理数据库)
+        - [<dataHost>定义后端数据库主机信息](#datahost定义后端数据库主机信息)
 
 <!-- /TOC -->
 ### server.xml文件
@@ -219,3 +223,38 @@
 
 ### schema.xml配置
 用途：1.配置逻辑库和逻辑表  2.配置逻辑表所存储的数据节点  3.配置数据节点所对应的物理数据库服务器信息
+
+#### <schema>定义逻辑库
+```xml
+<!-- name：逻辑库的名称    sqlMaxLimit：限制返回结果集的行数，-1表示关闭limit限制   checkSQLschema：是否检查发给mycat的sql是否包含库名 -->
+<schema name="testdb" checkSQLschema="false" sqlMaxLimit="1000"> </schema>
+```
+
+#### <schema>定义逻辑表
+```xml
+<!-- name：逻辑表的名称    primaryKey：逻辑表主键   dataNode: 数据储存节点的名称  rule: 对应rule.xml中的<tableule> -->
+<table name="testtable" primaryKey="user_id" dataNode="testdb1,testdb2" rule="user_id"> </table>
+```
+
+#### <dataNode>定义逻辑表存储的物理数据库
+```xml
+<dataNode name="zxl" dataHost="mysql001" database="zxl_db" />
+```
+
+#### <dataHost>定义后端数据库主机信息
+```xml
+<dataHost name="mysql001" maxCon="1000" minCon="10" balance="1"
+writeType="0" dbType="mysql" dbDriver="native" switchType="1"  slaveThreshold="100">
+<heartbeat>select user()</heartbeat>
+<!-- can have multi write hosts -->
+<writeHost host="hostM1" url="whoiszxl.com:3306" user="root"
+password="sf123456">
+<!-- can have multi read hosts -->
+<readHost host="hostS2" url="zxlvoid.com:3306" user="root" password="xxx" />
+</writeHost>
+<!--<writeHost host="hostS1" url="localhost:3316" user="root"-->
+<!--password="123456" />-->
+<!-- <writeHost host="hostM2" url="localhost:3316" user="root" password="123456"/> -->
+</dataHost>
+```
+
