金融项目:添加实体类

--- a/金融系统/1.数据库设计.md
+++ b/金融系统/1.数据库设计.md
@@ -34,3 +34,95 @@ CREATE TABLE order_t(
 	PRIMARY KEY(order_id)
 )ENGINE=INNODB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 ```
+
+## order实体类
+```java
+@Entity(name="order_t")
+public class Order {
+	
+	@Id
+	private String orderId;
+	
+	private String chanId;
+	
+	private String productId;
+	
+	private String chanUserId;
+	
+	/**
+	 * @see OrderType
+	 */
+	private String orderType;
+	
+	/**
+	 * @see OrderStatus
+	 */
+	private String orderStatus;
+	
+	private String outerOrderId;
+	
+	private BigDecimal amount;
+	
+	private String memo;
+	
+	private Date createAt;
+	
+	private Date updateAt;
+	
+	@Override
+	public String toString() {
+		return ReflectionToStringBuilder.toString(this, ToStringStyle.JSON_STYLE);
+	}
+
+  //getter and setter
+}
+```
+
+## product实体类
+```java
+@Entity
+public class Product {
+
+	@Id
+	private String id;
+	private String name;
+	
+	/**
+	 * @see ProductStatus
+	 */
+	private String status;
+	/**
+	 * 起投金额
+	 */
+	private BigDecimal thresholdAmount;
+	
+	/**
+	 * 投资步长
+	 */
+	private BigDecimal stepAmount;
+	
+	/**
+	 * 锁定期
+	 */
+	private Integer lockTerm;
+	
+	/**
+	 * 收益率
+	 */
+	private BigDecimal rewardRate;
+
+	private String memo;
+	private Date createAt;
+	private Date updateAt;
+	private String createUser;
+	private String updateUser;
+	
+	
+	@Override
+	public String toString() {
+		return ReflectionToStringBuilder.toString(this, ToStringStyle.JSON_STYLE);
+	}
+
+  //getter and setter
+}
+```
