高并发商详：RDB持久化配置

--- a/高并发商城商品详情页设计与开发/2.Redis进阶.md
+++ b/高并发商城商品详情页设计与开发/2.Redis进阶.md
@@ -1,3 +1,24 @@
+<!-- TOC -->
+
+- [单机版redis的安装以及redis生产环境启动方案](#单机版redis的安装以及redis生产环境启动方案)
+    - [安装单机版redis](#安装单机版redis)
+    - [redis的生产环境启动方案](#redis的生产环境启动方案)
+    - [redis cli的使用](#redis-cli的使用)
+- [RDB和AOF持久化机制原理](#rdb和aof持久化机制原理)
+    - [RDB和AOF两种持久化机制的介绍](#rdb和aof两种持久化机制的介绍)
+    - [RDB持久化机制的优点和缺点](#rdb持久化机制的优点和缺点)
+        - [优点](#优点)
+        - [缺点](#缺点)
+    - [AOF持久化机制的优点和缺点](#aof持久化机制的优点和缺点)
+        - [优点](#优点-1)
+        - [缺点](#缺点-1)
+    - [RDB和AOF到底该如何选择](#rdb和aof到底该如何选择)
+- [redis的RDB持久化配置以及数据恢复实验](#redis的rdb持久化配置以及数据恢复实验)
+    - [如何配置RDB持久化机制](#如何配置rdb持久化机制)
+    - [RDB持久化机制的工作流程](#rdb持久化机制的工作流程)
+    - [基于RDB持久化机制的数据恢复实验](#基于rdb持久化机制的数据恢复实验)
+
+<!-- /TOC -->
 # 单机版redis的安装以及redis生产环境启动方案
 
 ## 安装单机版redis
@@ -99,3 +120,28 @@ dir 		/var/redis/6379				设置持久化文件的存储位置
 2. 也不要仅仅使用AOF，因为那样有两个问题，第一，你通过AOF做冷备，没有RDB做冷备，来的恢复速度更快; 第二，RDB每次简单粗暴生成数据快照，更加健壮，可以避免AOF这种复杂的备份和恢复机制的bug
 
 3. 综合使用AOF和RDB两种持久化机制，用AOF来保证数据不丢失，作为数据恢复的第一选择; 用RDB来做不同程度的冷备，在AOF文件都丢失或损坏不可用的时候，还可以使用RDB来进行快速的数据恢复
+
+# redis的RDB持久化配置以及数据恢复实验
+
+## 如何配置RDB持久化机制
+1. 在`/etc/redis/6379.conf`去配置持久化:`save 60 1000`, 每隔60s，如果有超过1000个key发生了变更，那么就生成一个新的dump.rdb文件，就是当前redis内存中完整的数据快照，这个操作也被称之为snapshotting，快照,也可以手动调用save或者bgsave命令，同步或异步执行rdb快照生成
+2. save可以设置多个，就是多个snapshotting检查点，每到一个检查点，就会去check一下，是否有指定的key数量发生了变更，如果有，就生成一个新的dump.rdb文件
+
+
+
+## RDB持久化机制的工作流程
+1. redis根据配置自己尝试去生成rdb快照文件
+2. fork一个子进程出来
+3. 子进程尝试将数据dump到临时的rdb快照文件中
+4. 完成rdb快照文件的生成之后，就替换之前的旧的快照文件
+5. dump.rdb，每次生成一个新的快照，都会覆盖之前的老快照
+
+
+## 基于RDB持久化机制的数据恢复实验
+1. 在redis中保存几条数据，立即停掉redis进程，然后重启redis，看看刚才插入的数据还在不在
+2. 数据还在，因为通过redis-cli SHUTDOWN这种方式去停掉redis，其实是一种安全退出的模式，redis在退出的时候会将内存中的数据立即生成一份完整的rdb快照：`/var/redis/6379/dump.rdb`
+3. 在redis中再保存几条新的数据，用kill -9粗暴杀死redis进程，模拟redis故障异常退出，导致内存数据丢失的场景. 这次就发现，redis进程异常被杀掉，数据没有进dump文件，几条最新的数据就丢失了
+
+4. 手动设置一个save检查点，save 5 1
+5. 写入几条数据，等待5秒钟，会发现自动进行了一次dump rdb快照，在dump.rdb中发现了数据
+6. 异常停掉redis进程，再重新启动redis，看刚才插入的数据还在
