--- a/HTTP协议原理/1.HTTP协议原理笔记.md
+++ b/HTTP协议原理/1.HTTP协议原理笔记.md
@@ -20,6 +20,46 @@
 
 # HTTP协议特性
 
+## 跨域解决办法
+1. 设置服务器response头请求：`"Access-Control-Allow-Origin": "*"`，修改`*`为域名或者ip可以限制跨域发起的请求
+2. 使用Jsonp，通过`<script src="http://xxx.xxx.com/users">`标签去请求接口的数据
+
+## CORS预请求
+1. 跨域请求会有些限制，比如说头请求限制，请求方法限制
+2. 跨域请求的时候，有两个请求，先是`OPTIONS`的预请求，判断接下来的实际请求是否支持跨域，是否有头限制
+3. 通过设置:`"Access-Control-Allow-Headers": "X-Test-Cors"`可以增加允许跨域的`头请求`
+4. 通过设置:`"Access-Control-Allow-Methods": "POST, PUT, DELETE"`可以增加允许跨域的`请求方法`
+5. 通过设置:`"Access-Control-Max-Age": "1000"`代表着在以上设置的跨域请求在1000秒内都不要再发送预请求验证了
+
+## 缓存Cache-Control
+
+### 可缓存性
+1. public:Http请求中的任意地方都能进行缓存
+2. private:发起请求的浏览器才能缓存
+3. no-cache:不缓存
+
+### 缓存头
+1. `'Cache-Control': 'max-age=3600'`，设置浏览器缓存1小时，调试工具里的请求Size会为：`from memory cache`
+2. 为了避免缓存文件修改了之后浏览器还是请求旧数据，可以对文件内容进行hash计算，将hash值加入到资源请求地址中，就可以避免旧代码被缓存了
+
+### 资源验证
+1. Last-Modified:上次修改时间，配合`If-Modified-Since`或者`If-Unmodified-Since`使用，对比上一次修改时间以验证资源是否需要更新
+2. 使用Etag做数据签名验证，配合`If-Match`或者`If-Non-Match`,对比资源的签名判断是否使用缓存
+
+### Cookie
+1. `'Set-Cookie': ['username=xx; max-age=200', 'password=xx; HttpOnly']`,通过头设置cookie到浏览器中,HttpOnly会禁止js访问
+
+### HTTP长连接
+1. 在`HTTP/1.0`中默认使用短连接。也就是说，客户端和服务器每进行一次HTTP操作，就建立一次连接，任务结束就中断连接。当客户端浏览器访问的某个HTML或其他类型的Web页中包含有其他的Web资源（如JavaScript文件、图像文件、CSS文件等），每遇到这样一个Web资源，浏览器就会重新建立一个HTTP会话。
+2. 而从`HTTP/1.1`起，默认使用长连接，用以保持连接特性。使用长连接的HTTP协议，会在响应头加入这行代码：`Connection:keep-alive`,在使用长连接的情况下，当一个网页打开完成后，客户端和服务器之间用于传输HTTP数据的TCP连接不会关闭，客户端再次访问这个服务器时，会继续使用这一条已经建立的连接。Keep-Alive不会永久保持连接，它有一个保持时间，可以在不同的服务器软件（如Apache）中设定这个时间。实现长连接需要客户端和服务端都支持长连接。
+
+### 数据协商
+
+
+### Redirect
+
+
+### CSP
 
 
 # Nginx代理HTTPS
