--- a/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
+++ b/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
@@ -1,3 +1,12 @@
+<!-- TOC -->
+
+- [Spring Bean注入](#spring-bean注入)
+    - [传统方式](#传统方式)
+    - [注解方式](#注解方式)
+- [自定义FilterType](#自定义filtertype)
+
+<!-- /TOC -->
+
 ## Spring Bean注入
 
 ### 传统方式
@@ -53,4 +62,37 @@ for (String name : beanNames) {
 	System.out.println(name);
 }
 System.out.println(context.getBean("userService"));
+```
+
+## 自定义FilterType
+通过配置自定义FilterType，在自定义代码中可以获取到容器中的关于类的一些信息，通过这些信息可以去写一些自定义的筛选条件
+```java
+public class MyTypeFilter implements TypeFilter{
+
+	public boolean match(MetadataReader metadataReader, MetadataReaderFactory metadataReaderFactory)
+			throws IOException {
+		
+		//获取当前类注解的信息
+		AnnotationMetadata annotationMetadata = metadataReader.getAnnotationMetadata();
+		
+		//获取当前正在扫描的类信息
+		ClassMetadata classMetadata = metadataReader.getClassMetadata();
+		
+		//获取当前类资源（类路径）
+		Resource resource = metadataReader.getResource();
+		
+		String className = classMetadata.getClassName();
+		System.out.println("-->"+className);
+		
+		String className2 = annotationMetadata.getClassName();
+		System.out.println("==>"+className2);
+		
+		//过滤掉容器中类名中包含User的
+		if(className.contains("User")) {
+			return false;
+		}
+		return true;
+	}
+
+}
 ```
