--- a/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
+++ b/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
@@ -4,6 +4,8 @@
     - [传统方式](#传统方式)
     - [注解方式](#注解方式)
 - [自定义FilterType](#自定义filtertype)
+- [一些基础注解](#一些基础注解)
+    - [Scope注解](#scope注解)
 
 <!-- /TOC -->
 
@@ -94,5 +96,28 @@ public class MyTypeFilter implements TypeFilter{
 		return true;
 	}
 
+}
+```
+
+## 一些基础注解
+
+### Scope注解
+1. prototype: 创建的bean属于多实例,多实例的时候是懒加载，容器启动的时候并不会创建对象
+2. singleton: 单例创建对象（默认），ioc容器启动的时候就会直接创建对象添加到容器中,每次获取都是直接从容器中拿(map.get())
+3. request  : 同一次请求创建一次实例
+4. session  : 同一个session回话创建一个实例
+```java
+@Service
+@Scope(value="prototype") //多例模式，每次调用都创建一个新对象，初始化不创建
+//@Scope(value="singleton") 单例模式，初始化创建一个对象就不创建了
+public class UserService {
+	
+	public UserService() {
+		System.out.println("UserService.UserService()");
+	}
+	@Override
+	public String toString() {
+		return "UserService []";
+	}
 }
 ```
