spring condition通过条件判断是否加载对象到bean中

--- a/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
+++ b/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
@@ -6,6 +6,7 @@
 - [自定义FilterType](#自定义filtertype)
 - [一些基础注解](#一些基础注解)
     - [Scope注解](#scope注解)
+    - [Conditional注解](#conditional注解)
 
 <!-- /TOC -->
 
@@ -110,6 +111,7 @@ public class MyTypeFilter implements TypeFilter{
 @Service
 @Scope(value="prototype") //多例模式，每次调用都创建一个新对象，初始化不创建
 //@Scope(value="singleton") 单例模式，初始化创建一个对象就不创建了
+//@Lazy 在单例模式下，添加Lazy注解可以实现懒加载，初始化的时候不会创建对象
 public class UserService {
 	
 	public UserService() {
@@ -121,3 +123,28 @@ public class UserService {
 	}
 }
 ```
+
+
+### Conditional注解
+Springboot底层大量使用的注解，其按照一定条件进行判断，满足条件才给容器中注册bean,如果将注解添加在类上的话，作用范围就是整个类
+
+```java
+
+public class OneCondition implements Condition{
+	public boolean matches(ConditionContext context, AnnotatedTypeMetadata metadata) {
+		//这里可以根据业务来判断是否要加载这个类
+		if("One".equals("One")) {
+			return true;
+		}
+		return false;
+	}
+}
+
+
+@Bean("huang")
+@Conditional({OneCondition.class}) //如果OneCondition返回ture，加载，false不加载
+public Person huang() {
+	return new Person("huang",22);
+}
+```
+ 
