spring import注解和import中的selector，registrar,factroryBean

--- a/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
+++ b/Spring框架注解驱动原理/0.Spring組件注册基础注解解析.md
@@ -7,6 +7,10 @@
 - [一些基础注解](#一些基础注解)
     - [Scope注解](#scope注解)
     - [Conditional注解](#conditional注解)
+    - [Import注解](#import注解)
+        - [Import之ImportSelector](#import之importselector)
+        - [Import之ImportBeanDefinitionRegistrar](#import之importbeandefinitionregistrar)
+    - [使用FactoryBean注册组件](#使用factorybean注册组件)
 
 <!-- /TOC -->
 
@@ -148,3 +152,60 @@ public Person huang() {
 }
 ```
  
+### Import注解
+直接在类上使用`@Import({Man.class})`就可以直接导入对象到容器中
+
+#### Import之ImportSelector
+一个实现了ImportSelector接口的类，返回一个字符串数组，里面是需要导入容器的全类名，可以在`@Import`标签中直接使用这个类
+
+```java
+public class MyImportSelector implements ImportSelector{
+
+	public String[] selectImports(AnnotationMetadata importingClassMetadata) {
+		return new String[] {"com.whoiszxl.bean.Boy","com.whoiszxl.bean.Girl"};
+	}
+}
+```
+
+#### Import之ImportBeanDefinitionRegistrar
+一个实现了ImportBeanDefinitionRegistrar接口的类，在`@Import`标签中直接使用这个类可以在类代码中直接通过`BeanDefinitionRegistry`手工注册实例到容器中
+
+```java
+public class MyImportBeanDefinitionRegistrar implements ImportBeanDefinitionRegistrar{
+
+	/**
+	 * 把需要註冊的bean調用registry手工註冊進來
+	 */
+	public void registerBeanDefinitions(AnnotationMetadata importingClassMetadata, BeanDefinitionRegistry registry) {
+		//判断容器中是否含有com.whoiszxl.bean.Girl类
+		boolean hasGirl = registry.containsBeanDefinition("com.whoiszxl.bean.Girl");
+		if(hasGirl) {
+			//存在Girl的话，就用registry把Me也注册进去
+			RootBeanDefinition rootBeanDefinition = new RootBeanDefinition(Me.class);
+			registry.registerBeanDefinition("me", rootBeanDefinition);
+		}
+	}
+}
+```
+
+### 使用FactoryBean注册组件
+通过实现FactoryBean接口，可以配置返回的对象，对象类型，是否是单例来通过工厂模式注册bean
+```java
+public class PeopleFactoryBean implements FactoryBean<Girl>{
+
+	//返回一个Girl对象，并将其添加到容器中
+	public Girl getObject() throws Exception {
+		return new Girl("明日香");
+	}
+
+	//对象类型
+	public Class<?> getObjectType() {
+		return Girl.class;
+	}
+
+	//是否是单例
+	public boolean isSingleton() {
+		return true;
+	}
+}
+```
