spring bean生命周期之初始化和销毁

--- a/Spring框架注解驱动原理/1.SpringBean的生命周期.md
+++ b/Spring框架注解驱动原理/1.SpringBean的生命周期.md
@@ -1,4 +1,6 @@
 ## Spring Bean初始化和销毁
+
+### 方法一（Bean注解属性）
 在对象中指定init和destroy方法,通过`@Bean(initMethod="init", destroyMethod="destroy")`指定初始化和销毁的方法名称
 
 ```java
@@ -39,4 +41,65 @@ public class MainConfigOfLifeCycle {
 		return new Girl("明日香");
 	}
 }
+```
+
+### 方法二（实现接口）
+实体类实现`InitializingBean,DisposableBean`这两个接口
+
+```java
+@Component
+public class Beauty implements InitializingBean,DisposableBean{
+
+	public void destroy() throws Exception {
+		System.out.println("Beauty.destroy()");
+	}
+
+	public void afterPropertiesSet() throws Exception {
+		System.out.println("Beauty.afterPropertiesSet()");
+	}
+	
+}
+```
+
+### 方法三（方法注解）
+在初始化和销毁方法添加注解`@PostConstruct,@PreDestroy`
+```java
+@Component
+public class PerfectMan {
+	
+	public PerfectMan() {
+		System.out.println("PerfectMan.PerfectMan()");
+	}
+	
+	@PostConstruct
+	public void init() {
+		System.out.println("PerfectMan.init(对象创建赋值之后执行)");
+	}
+	
+	@PreDestroy
+	public void over() {
+		System.out.println("PerfectMan.over(在销毁前执行)");
+	}
+}
+```
+
+### 方法四（后置处理器）
+在bean初始化前后进行处理，实现`BeanPostProcessor`接口，然后每一个bean初始化的前后都会执行这两个方法。
+
+Bean的赋值，注入其它组件，@Autowired，生命周期注解功能，@Async都使用到了`BeanPostProcessor`
+```java
+@Component
+public class MyBeanPostProcessor implements BeanPostProcessor{
+
+	public Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+		System.out.println("MyBeanPostProcessor.postProcessBeforeInitialization()"+beanName);
+		return bean;
+	}
+
+	public Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+		System.out.println("MyBeanPostProcessor.postProcessAfterInitialization()"+beanName);
+		return bean;
+	}
+}
+
 ```
