加载外部properties文件

--- a/Spring框架注解驱动原理/2.Spring自动装配解析.md
+++ b/Spring框架注解驱动原理/2.Spring自动装配解析.md
@@ -4,3 +4,19 @@
 @Value("绫波丽")
 private String name;
 ```
+
+## @PropertySource加载外部配置文件
+使用@PropertySource读取外部的properties文件可以以keyValue的形式保存到运行的环境变量中，然后使用`${}`的方式可以获取到
+
+```java
+//配置
+@PropertySource(value= {"classpath:/p.properties"})
+@Configuration
+public class MainConfigOfPropertyValues {
+
+}
+
+//读取
+@Value("${my.username}")
+private String name;
+```
