--- a/Spring框架注解驱动原理/2.Spring自动装配解析.md
+++ b/Spring框架注解驱动原理/2.Spring自动装配解析.md
@@ -20,3 +20,9 @@ public class MainConfigOfPropertyValues {
 @Value("${my.username}")
 private String name;
 ```
+
+## @Autowired自动装配
+1. 默认是优先按照类型去容器中找对应的组件
+2. 如果找到了多个相同的组件，再将属性的名称作为id去容器中寻找
+3. 使用`@Qualifier`指定需要装配的组件id，而不是去使用属性名
+4. `@Primary`可以指定首选bean
