--- a/Spring框架注解驱动原理/2.Spring自动装配解析.md
+++ b/Spring框架注解驱动原理/2.Spring自动装配解析.md
@@ -26,3 +26,7 @@ private String name;
 2. 如果找到了多个相同的组件，再将属性的名称作为id去容器中寻找
 3. 使用`@Qualifier`指定需要装配的组件id，而不是去使用属性名
 4. `@Primary`可以指定首选bean
+
+## @Resource和@Inject
+1. @Resource是Java的规范，@Autowired是spring的规范，作用大致相同，不支持@Primary功能
+2. @Inject也是功能一样，但是需要先导入javax的包
