netty服务端启动过程之初始化channel

--- a/Netty源码深入剖析/2.Netty服务端启动过程源码分析.md
+++ b/Netty源码深入剖析/2.Netty服务端启动过程源码分析.md
@@ -1,3 +1,11 @@
+<!-- TOC -->
+
+- [Netty幅度段启动过程源码分析](#netty幅度段启动过程源码分析)
+    - [服务端Channel的创建 newChannel()](#服务端channel的创建-newchannel)
+    - [服务端channel的初始化 init()](#服务端channel的初始化-init)
+
+<!-- /TOC -->
+
 # Netty幅度段启动过程源码分析
 
 ## 服务端Channel的创建 newChannel()
@@ -58,4 +66,71 @@ public T newChannel() {
 }
 ```
 
-## 初始化channel
+## 服务端channel的初始化 init()
+1. 在执行完`channel = channelFactory.newChannel();`反射创建channel后，就执行`init(channel);`初始化channel了
+2. 进行初始化的代码如下：
+```java
+// channel初始化方法
+@Override
+void init(Channel channel) throws Exception {
+    //1. 获取到netty AbstractBootstrap自带的配置和属性
+    final Map<ChannelOption<?>, Object> options = options0();
+    synchronized (options) {
+        channel.config().setOptions(options);
+    }
+    final Map<AttributeKey<?>, Object> attrs = attrs0();
+    synchronized (attrs) {
+        for (Entry<AttributeKey<?>, Object> e: attrs.entrySet()) {
+            @SuppressWarnings("unchecked")
+            AttributeKey<Object> key = (AttributeKey<Object>) e.getKey();
+            channel.attr(key).set(e.getValue());
+        }
+    }
+    //2. 直接获取到channel的pipeline
+    ChannelPipeline p = channel.pipeline();
+    //3. 获取到手动配置的childGroup和手动编写的业务逻辑处理者childHandler（com.whoiszxl.netty.no3.Server）
+    final EventLoopGroup currentChildGroup = childGroup;
+    final ChannelHandler currentChildHandler = childHandler;
+    final Entry<ChannelOption<?>, Object>[] currentChildOptions;
+    final Entry<AttributeKey<?>, Object>[] currentChildAttrs;
+
+    //4. 两个同步代码块配置一下通过childOption和childAttr设置进来的参数
+    synchronized (childOptions) {
+        currentChildOptions = childOptions.entrySet().toArray(newOptionArray(childOptions.size()));
+    }
+    synchronized (childAttrs) {
+        currentChildAttrs = childAttrs.entrySet().toArray(newAttrArray(childAttrs.size()));
+    }
+    //5. 再把这个channel初始化程序添加到ChannelHandler的链表结构中去，添加的源代码见最下addLast0方代码
+    p.addLast(new ChannelInitializer<Channel>() {
+        @Override
+        public void initChannel(Channel ch) throws Exception {
+            final ChannelPipeline pipeline = ch.pipeline();
+            ChannelHandler handler = config.handler();
+            if (handler != null) {
+                pipeline.addLast(handler);
+            }
+            // We add this handler via the EventLoop as the user may have used a ChannelInitializer as handler.
+            // In this case the initChannel(...) method will only be called after this method returns. Because
+            // of this we need to ensure we add our handler in a delayed fashion so all the users handler are
+            // placed in front of the ServerBootstrapAcceptor.
+            ch.eventLoop().execute(new Runnable() {
+                @Override
+                public void run() {
+                    pipeline.addLast(new ServerBootstrapAcceptor(
+                            currentChildGroup, currentChildHandler, currentChildOptions, currentChildAttrs));
+                }
+            });
+        }
+    });
+}
+
+//ChannelHandler的链表结构
+private void addLast0(AbstractChannelHandlerContext newCtx) {
+    AbstractChannelHandlerContext prev = tail.prev;
+    newCtx.prev = prev;
+    newCtx.next = tail;
+    prev.next = newCtx;
+    tail.prev = newCtx;
+}
+```
