--- a/Netty源码深入剖析/2.Netty服务端启动过程源码分析.md
+++ b/Netty源码深入剖析/2.Netty服务端启动过程源码分析.md
@@ -3,6 +3,7 @@
 - [Netty幅度段启动过程源码分析](#netty幅度段启动过程源码分析)
     - [服务端Channel的创建 newChannel()](#服务端channel的创建-newchannel)
     - [服务端channel的初始化 init()](#服务端channel的初始化-init)
+    - [服务端selector的注册 register()](#服务端selector的注册-register)
 
 <!-- /TOC -->
 
@@ -132,5 +133,106 @@ private void addLast0(AbstractChannelHandlerContext newCtx) {
     newCtx.next = tail;
     prev.next = newCtx;
     tail.prev = newCtx;
+}
+```
+
+## 服务端selector的注册 register()
+1. 执行完上述的`init(channel);`后，开始执行`ChannelFuture regFuture = config().group().register(channel);`注册了
+2. 拿到`io.netty.channel.nio.NioEventLoopGroup`开始获取到`EventExecutor事件执行`调用`register(channel)`来注册
+```java
+//1. 包装一个DefaultChannelPromise
+@Override
+public ChannelFuture register(Channel channel) {
+    return register(new DefaultChannelPromise(channel, this));
+}
+
+//2. 再调用一层
+@Override
+public ChannelFuture register(final ChannelPromise promise) {
+    //3. 校验不为空，如果为空则抛出参数2的空指针错误
+    ObjectUtil.checkNotNull(promise, "promise");
+    //4. 获取到channel调用unsafe再调用注册，利用Unsafe来提高内存读写性能
+    promise.channel().unsafe().register(this, promise);
+    return promise;
+}
+
+
+@Override
+public final void register(EventLoop eventLoop, final ChannelPromise promise) {
+    if (eventLoop == null) {
+        throw new NullPointerException("eventLoop");
+    }
+    //5. 返回false不执行，刚启动是还没有注册的
+    if (isRegistered()) {
+        promise.setFailure(new IllegalStateException("registered to an event loop already"));
+        return;
+    }
+
+    //6. 判断eventLoop是不是NioEventLoop
+    if (!isCompatible(eventLoop)) {
+        promise.setFailure(
+                new IllegalStateException("incompatible event loop type: " + eventLoop.getClass().getName()));
+        return;
+    }
+    AbstractChannel.this.eventLoop = eventLoop;
+    if (eventLoop.inEventLoop()) {
+        register0(promise);
+    } else {
+        try {
+            eventLoop.execute(new Runnable() {
+                @Override
+                public void run() {
+                    //7. 开始注册了，注册代码见下方代码
+                    register0(promise);
+                }
+            });
+        } catch (Throwable t) {
+            logger.warn(
+                    "Force-closing a channel whose registration task was not accepted by an event loop: {}",
+                    AbstractChannel.this, t);
+            closeForcibly();
+            closeFuture.setClosed();
+            safeSetFailure(promise, t);
+        }
+    }
+}
+
+
+//还是有点迷
+private void register0(ChannelPromise promise) {
+    try {
+        // check if the channel is still open as it could be closed in the mean time when the register
+        // call was outside of the eventLoop
+        if (!promise.setUncancellable() || !ensureOpen(promise)) {
+            return;
+        }
+        boolean firstRegistration = neverRegistered;
+        doRegister();
+        neverRegistered = false;
+        registered = true;
+        // Ensure we call handlerAdded(...) before we actually notify the promise. This is needed as the
+        // user may already fire events through the pipeline in the ChannelFutureListener.
+        pipeline.invokeHandlerAddedIfNeeded();
+        safeSetSuccess(promise);
+        pipeline.fireChannelRegistered();
+        // Only fire a channelActive if the channel has never been registered. This prevents firing
+        // multiple channel actives if the channel is deregistered and re-registered.
+        if (isActive()) {
+            if (firstRegistration) {
+                pipeline.fireChannelActive();
+            } else if (config().isAutoRead()) {
+                // This channel was registered before and autoRead() is set. This means we need to begin read
+                // again so that we process inbound data.
+                //
+                // See https://github.com/netty/netty/issues/4805
+                beginRead();
+            }
+        }
+    } catch (Throwable t) {
+        // Close the channel directly to avoid FD leak.
+        closeForcibly();
+        closeFuture.setClosed();
+        safeSetFailure(promise, t);
+    }
 }
 ```
