--- a/Netty源码深入剖析/2.Netty服务端启动过程源码分析.md
+++ b/Netty源码深入剖析/2.Netty服务端启动过程源码分析.md
@@ -4,6 +4,7 @@
     - [服务端Channel的创建 newChannel()](#服务端channel的创建-newchannel)
     - [服务端channel的初始化 init()](#服务端channel的初始化-init)
     - [服务端selector的注册 register()](#服务端selector的注册-register)
+    - [服务端port的绑定 dobind()](#服务端port的绑定-dobind)
 
 <!-- /TOC -->
 
@@ -234,5 +235,46 @@ private void register0(ChannelPromise promise) {
         closeFuture.setClosed();
         safeSetFailure(promise, t);
     }
+}
+```
+
+## 服务端port的绑定 dobind()
+```java
+private ChannelFuture doBind(final SocketAddress localAddress) {
+    
+    final ChannelFuture regFuture = initAndRegister();
+    final Channel channel = regFuture.channel();
+    if (regFuture.cause() != null) {
+        return regFuture;
+    }
+    //执行完创建初始化和注册之后执行绑定
+    if (regFuture.isDone()) {
+        // At this point we know that the registration was complete and successful.
+        //创建ChannelPromise
+        ChannelPromise promise = channel.newPromise();
+        //绑定
+        doBind0(regFuture, channel, localAddress, promise);
+        return promise;
+    }
+    // ......
+}
+
+private static void doBind0(
+        final ChannelFuture regFuture, final Channel channel,
+        final SocketAddress localAddress, final ChannelPromise promise) {
+    // This method is invoked before channelRegistered() is triggered.  Give user handlers a chance to set up
+    // the pipeline in its channelRegistered() implementation.
+    //通过线程执行channel bind
+    channel.eventLoop().execute(new Runnable() {
+        @Override
+        public void run() {
+            if (regFuture.isSuccess()) {
+                //执行bind
+                channel.bind(localAddress, promise).addListener(ChannelFutureListener.CLOSE_ON_FAILURE);
+            } else {
+                promise.setFailure(regFuture.cause());
+            }
+        }
+    });
 }
 ```
