--- a/Java架构系列/分布式专题/1.分布式初步认识.md
+++ b/Java架构系列/分布式专题/1.分布式初步认识.md
@@ -43,3 +43,15 @@
 5. 要想父类对象也参与序列化操作，那么必须要让父类也实现Serializable接口
 6. Transient关键字，主要是控制变量是否能够被序列化。如果没有被序列化的成员变量反序列化后，会被设置成初始值，比如String -> null
 7. 通过序列化操作实现深度克隆
+
+## 分布式通信框架 - rmi
+
+### RMI概述
+1. RMI(remote method invocation)  , 可以认为是RPC的java版本
+2. RMI使用的是JRMP（Java Remote Messageing Protocol）, JRMP是专门为java定制的通信协议，所以踏实纯java的分布式解决方案
+
+### 如何实现一个RMI程序
+1. 创建远程接口， 并且继承java.rmi.Remote接口
+2. 实现远程接口，并且继承：UnicastRemoteObject
+3. 创建服务器程序： createRegistry方法注册远程对象
+4. 创建客户端程序
